2289 [OneClick] fixed error when opening some files. Bug #703
2288 [MP4 Muxer] added support for Apple TV & iPad

Changelog 2237 --> 2287

Features/Changes:
- enhanced AVS Script Creator (read details in the block below) 
- added BassAudioSource() as audio decoder
  the default order is now: NicAudio, BassAudio, FFAudioSource, DirectShow
- enhanced OneClick e.g. mux input files into MKV if possible for better audio/video processing support

Enhancements/Fixes:
[Adaptive Muxer] fixed handling of the "and close" button
[Audio Encoding Window] cosmetics
[Audio] changed default value of the normalization to disabled
[AVS Script Creator] added "Aspect Ratio Error"
[AVS Script Creator] added option to enable upsizing in the profile (disabled by default)
[AVS Script Creator] added option to select the default mod value in the profile (mod16 by default)
[AVS Script Creator] adjusted "Clever (TM) anamorphic encoding" so the new mod values are used
[AVS Script Creator] always show the correct output resolution when not resizing
[AVS Script Creator] even with upsizing allowed the default resolution will use no upsizing
[AVS Script Creator] moved "acceptable aspect error" setting into the AviSynth profile (1% by default)
[AVS Script Creator] resize is enabled by default in the profiles (only for new profiles)
[AVS Script Creator] suggest resolution is automatically pre-selected when doing a resize
[AVS Script Creator] use very high accuracy for anamorphic encodings if acceptable aspect error is set to 0%
[HD Streams Extractor] + [MP4 Muxer] fixed wrong detection of errors if file name contains "error"
[HD Streams Extractor] fixed handling of seamless branching EVO files
[HD Streams Extractor] log adjustments for eac3to 3.25+
[Job] improved aborting of Jobs
[MediaInfo] improved aspect ratio detection
[MP4 Muxer] improved iOS compatibility when using multiple audio/subtitle tracks. Patch #65 by Eli Bildirici
[OneClick] added option to extract the core from HD audio tracks